@@ -14,6 +14,8 @@ munin (work)
   * Plugins: New wildcard plugin generic/courier_ by Micah Anderson
     (Deb#291854). 
   * Plugins: New plugin generic/perdition by Micah Anderson (Deb#291855).
+  * Plugins: Plugin generic/squid_cache now handles multiple caches
+    (Deb#288579).
 
 munin (1.3.0)
 
